Fix some CSS issues and update out-of-date pages.

--- a/ipp/everywhere.html
+++ b/ipp/everywhere.html
@@ -26,7 +26,7 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2>IPP Everywhere Clients</h2>
     <p>Many clients already support IPP Everywhere. For those that don&rsquo;t, operating system and desktop environment developers can leverage existing open source software to quickly provide IPP Everywhere printing support.</p>
-    <p class="pwg-note">Popular clients: Android, ChromeOS, CUPS, Linux, macOS</p>
+    <p class="pwg-note">Popular clients: Android, ChromeOS, CUPS, Linux, macOS, Windows</p>
     <p class="hidden-xs">&nbsp;</p>
     <ul class="nav nav-pills">
       <li class="nav-item" role="presentation"><a class="nav-link" href="https://github.com/istopwg/ippsample">Sample Software</a></li>
