IPP charter and docobject 1.2

--- a/ipp/index.html
+++ b/ipp/index.html
@@ -22,7 +22,7 @@ layout: bare
   <div class="col-md-12 col-sm-12">
     <h2 id="ABOUT">About the IPP Workgroup</h2>
 
-    <p>Approved Charter: <a  href="https://ftp.pwg.org/pub/pwg/ipp/charter/ch-ipp-charter-20210409.pdf">View</a></p>
+    <p>Approved Charter: <a  href="http://ftp.pwg.org/pub/pwg/ipp/charter/ch-ipp-charter-20240510.pdf">View</a></p>
 
     <h3>Officers</h3>
 
@@ -93,12 +93,6 @@ layout: bare
     <h2 id="DRAFTS">Working Drafts</h2>
 
     <h3>Standards-Track Drafts</h3>
-
-    <p>IPP Document Object v1.2 (DOCOBJECT):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject12-20240301.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippdocobject12-20240301-rev.pdf">Redlined</a>
-    (Stable Draft - PWG Call for Objections - Last Updated March 1, 2024)</p>
 
     <p>IPP Encrypted Jobs and Documents v1.0 (TRUSTNOONE):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ipptrustnoone10-20210519.pdf">Clean</a>
@@ -176,7 +170,7 @@ layout: bare
     <p><a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippfinishings30-20220527-5100.1.pdf">PWG 5100.1-2022</a>: IPP Finishings 3.0 (FIN)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippoutputbin10-20010207-5100.2.pdf">PWG 5100.2-2001</a>: "output-bin" attribute extension<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippppx20-20230131-5100.3.pdf">PWG 5100.3-2023</a>: Production Printing Extensions v2.0 (PPX)<br>
-    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippdocobject11-20190521-5100.5.pdf">PWG 5100.5-2019</a>: IPP Document Object v1.1<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippdocobject12-20240517-5100.5.pdf">PWG 5100.5-2024</a>: IPP Document Object v1.2<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipppageoverride10-20031031-5100.6.pdf">PWG 5100.6-2003</a>: IPP Page Overrides<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippjobext21-20230210-5100.7.pdf">PWG 5100.7-2023</a>: IPP Job Extensions v2.1 (JOBEXT)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippactuals10-20030313-5100.8.pdf">PWG 5100.8-2003</a>: IPP "-actual" attributes<br>
