--- a/ipp/index.html
+++ b/ipp/index.html
@@ -63,6 +63,17 @@ layout: bare
 
     <p>Registration Policy: <a href="https://ftp.pwg.org/pub/pwg/general/process/ipp-registry-policy.txt">Plain Text</a></p>
 
+    <p>Attributes:
+    <a href="print3d.html">3D Print Job Template</a>
+    &middot;
+    <a href="faxout.html">FaxOut Job Template</a>
+    &middot;
+    <a href="print.html">Print Job Template</a>
+    &middot;
+    <a href="scan.html">Scan Job Template</a>
+    &middot;
+    <a href="ipp-snmp.html">SNMP Mapping</a></p>
+
     <p>Pending PWG IPP Registrations: <a href="ipp-registrations.xml">XML</a></p>
 
     <p>IANA IPP Registrations: <a href="http://www.iana.org/assignments/ipp-registrations/ipp-registrations.xml">XML</a>
