--- a/ipp/index.html
+++ b/ipp/index.html
@@ -149,6 +149,12 @@ layout: bare
 
     <h3>Registration Drafts</h3>
 
+    <p>IPP Firmware Update Extensions v1.0 (FWUPDATE):
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-20240826.pdf">Clean</a>
+    <!--&middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-2024mmdd-rev.pdf">Redlined</a>-->
+    (Initial Draft - Last Updated August 26, 2024)</p>
+
     <p>IPP Wi-Fi Configuration Extensions v1.0 (WIFI):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240731.pdf">Clean</a>
     <!--&middot;
