--- a/ipp/index.html
+++ b/ipp/index.html
@@ -142,10 +142,10 @@ layout: bare
     (Prototype Draft - Last Updated July 31, 2024)</p>
 
     <p>Internet Printing Protocol/2.x Fourth Edition (BASE), updating PWG 5100.12-2015:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240803.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240807.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240803-rev.pdf">Redlined</a>
-    (Stable Draft - Last Updated August 3, 2024)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240807-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated August 7, 2024)</p>
 
     <h3>Registration Drafts</h3>
 
@@ -156,10 +156,10 @@ layout: bare
     (Initial Draft - Last Updated August 26, 2024)</p>
 
     <p>IPP Wi-Fi Configuration Extensions v1.0 (WIFI):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240731.pdf">Clean</a>
-    <!--&middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240731-rev.pdf">Redlined</a>-->
-    (Initial Draft - Last Updated July 31, 2024)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240807.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240807-rev.pdf">Redlined</a>
+    (Initial Draft - Last Updated August 7, 2024)</p>
 
     <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
 
