--- a/ipp/index.html
+++ b/ipp/index.html
@@ -130,10 +130,10 @@ layout: bare
     (Stable Draft - Last Updated June 24, 2024)</p>
 
     <p>IPP Shared Infrastructure Extensions v1.1 (INFRA):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20240726.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20240807.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20240726-rev.pdf">Redlined</a>
-    (Interim Draft - Last Updated July 26, 2024)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20240807-rev.pdf">Redlined</a>
+    (Stable Draft - Last Updated August 7, 2024)</p>
 
     <p>IPP System Service v1.1 (SYSTEM):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem11-20240731.pdf">Clean</a>
@@ -159,7 +159,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240807.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippwifi10-20240807-rev.pdf">Redlined</a>
-    (Initial Draft - Last Updated August 7, 2024)</p>
+    (Stable Draft - Last Updated August 7, 2024)</p>
 
     <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
 
