EPSON PX-M7120FP Series

--- a/printers/index.html
+++ b/printers/index.html
@@ -16,7 +16,7 @@ layout: bare
 <!--      <option value="Brother"></option>-->
       <option value="Canon"></option>
       <option value="DCC"></option>
-<!--      <option value="EPSON"></option>-->
+      <option value="EPSON"></option>
 <!--      <option value="Fuji Xerox"></option>-->
       <option value="HP"></option>
 <!--      <option value="Konica Minolta"></option>-->
