--- a/printers/index.html
+++ b/printers/index.html
@@ -13,19 +13,19 @@ layout: bare
     <form id="search" onSubmit="event.preventDefault(); update();" style="text-align: center;">Filter:
     <input type="search" style="-webkit-appearance: auto;" name="q" placeholder="Make, model, etc." list="qlist" autocomplete="org.pwg.ipp-everywhere" onInput="update();">
     <datalist id="qlist">
-<!--      <option value="Brother"></option>-->
+      <option value="Brother"></option>
       <option value="Canon"></option>
       <option value="DCC"></option>
       <option value="EPSON"></option>
 <!--      <option value="Fuji Xerox"></option>-->
       <option value="HP"></option>
-<!--      <option value="Konica Minolta"></option>-->
-<!--      <option value="Kyocera"></option>-->
+      <option value="Konica Minolta"></option>
+      <option value="Kyocera"></option>
       <option value="Lexmark"></option>
       <option value="OKI"></option>
       <option value="Ricoh"></option>
-<!--      <option value="Toshiba"></option>-->
-<!--      <option value="Xerox"></option>-->
+      <option value="Toshiba"></option>
+      <option value="Xerox"></option>
     </datalist>
     <select name="media" onChange="update();">
       <option value="">All Sizes</option>
