--- a/ipp/index.html
+++ b/ipp/index.html
@@ -141,11 +141,6 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippsystem11-20241011-rev.pdf">Redlined</a>
     (Stable Draft - Last Updated October 11, 2024)</p>
 
-    <p>Internet Printing Protocol/2.x Fourth Edition (BASE), updating PWG 5100.12-2015:
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240912.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippbase23-20240912-rev.pdf">Redlined</a>
-    (Stable Draft and IPP WG Last Call - Last Updated September 12, 2024)</p>
 
     <h3>Registration Drafts</h3>
 
@@ -154,6 +149,7 @@ layout: bare
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-20241024-rev.pdf">Redlined</a>
     (Interim Draft - Last Updated October 24, 2024)</p>
+
 
     <!--<h3>White Paper/Tech Brief/Best Practice Drafts</h3>-->
 
@@ -173,7 +169,7 @@ layout: bare
 
     <h3>Standards <a class="badge badge-primary badge-pill" href="#" id="standards" role="button" data-toggle="popover" data-container="body" data-content="A PWG Standard is a specification that has been approved by the Printer Working Group membership and has demonstrated interoperability.">i</a></h3>
 
-    <p><a href="https://ftp.pwg.org/pub/pwg/standards/std-ipp20-20151030-5100.12.pdf">PWG 5100.12-2015</a>: IPP 2.0, 2.1, and 2.2</p>
+    <p><a href="https://ftp.pwg.org/pub/pwg/standards/std-ippbase23-20241108-5100.12.pdf">PWG 5100.12-2024</a>: Internet Printing Protocol/2.x Fourth Edition</p>
 
 
     <h3>Candidate Standards <a class="badge badge-primary badge-pill" href="#" id="candidates" role="button" data-toggle="popover" data-container="body" data-content="A PWG Candidate Standard is a specification that has been approved by the Printer Working Group membership and has been prototyped.">i</a></h3>
