--- a/ipp/index.html
+++ b/ipp/index.html
@@ -145,10 +145,10 @@ layout: bare
     <h3>Registration Drafts</h3>
 
     <p>IPP Console Extensions v1.0 (CONSOLE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250107.pdf">Clean</a>
-    <!--&middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250107-rev.pdf">Redlined</a>-->
-    (Initial Draft - Last Updated January 7, 2025)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250127.pdf">Clean</a>
+    &middot;
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250127-rev.pdf">Redlined</a>
+    (Initial Draft - Last Updated January 27, 2025)</p>
 
     <p>IPP Firmware Update Extensions v1.0 (FWUPDATE):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-20241024.pdf">Clean</a>
