--- a/ipp/index.html
+++ b/ipp/index.html
@@ -135,7 +135,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20250331.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20250331-rev.pdf">Redlined</a>
-    (PWG Call for Objections Ends May 2, 2025 - Last Updated March 31, 2025)</p>
+    (PWG Call for Objections Ends May 2, 2025 - Stable Draft - Last Updated March 31, 2025)</p>
 
 
     <h3>Registration Drafts</h3>
@@ -144,13 +144,13 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250227.pdf">Clean</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250227-rev.pdf">Redlined</a>
-    (IPP WG Last Call Ends April 25, 2025 - Last Updated February 27, 2025)</p>
+    (IPP WG Last Call Ends April 25, 2025 - Stable Draft - Last Updated February 27, 2025)</p>
 
     <p>IPP Envelope Media Extensions v1.0 (ENVELOPE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250331.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250425.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250331-rev.pdf">Redlined</a>
-    (Prototype Draft - Last Updated March 31, 2025)</p>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250425-rev.pdf">Redlined</a>
+    (IPP WG Last Call Ends May 9, 2025 - Stable Draft - Last Updated April 25, 2025)</p>
 
     <p>IPP Firmware Update Extensions v1.0 (FWUPDATE):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-20241024.pdf">Clean</a>
