CONSOLE, ENVELOPE, INFRA

--- a/standards.html
+++ b/standards.html
@@ -96,8 +96,8 @@ layout: bare
     <p>This document defines an IPP extension that implements a protocol binding of the PWG Semantic Model Scan service over IPP.</p>
 
 
-    <h3>PWG 5100.18-2015: IPP Shared Infrastructure Extensions (INFRA) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra10-20150619-5100.18.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra10-20150619-5100.18.docx">DOCX</a></h3>
-    <p>As network infrastructure has become more complex, the traditional client-server model of printing is no longer sufficient to describe the interactions between the IPP Client and IPP Printer. This document defines an IPP Binding of the Cloud Imaging Model that allows IPP Printers to interface with shared services based in the network infrastructure, i.e., software-defined networks, and/or through Cloud-based solutions to remotely obtain and process Jobs and Documents, and provide state and configuration changes to those services.</p>
+    <h3>PWG 5100.18-2025: IPP Shared Infrastructure Extensions v1.1 (INFRA) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra11-20250502-5100.18.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra11-20250502-5100.18.docx">DOCX</a></h3>
+    <p>This document defines an IPP binding of the Cloud Imaging Model that allows IPP Printers to interface with shared services based in the network infrastructure and/or through Cloud-based solutions to remotely obtain and process Jobs and Documents, and provide state and configuration changes to those shared services.</p>
 
 
     <h3>PWG 5100.19-2015: IPP Implementor&#039;s Guide v2.0 (IG) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippig20-20150821-5100.19.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippig20-20150821-5100.19.docx">DOCX</a></h3>
@@ -111,7 +111,7 @@ layout: bare
     <h3>PWG 5100.21-2019: IPP 3D Printing Extensions v1.1 (3D) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipp3d11-20190329-5100.21.docx">DOCX</a></h3>
     <p>This specification defines an extension to the Internet Printing Protocol and IPP Everywhere that supports printing of physical objects by Additive Manufacturing devices such as 3D printers.</p>
 
-    <h3>PWG 5100.22-2019: IPP System Service v1.0 (SYSTEM) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem10-20191122-5100.22.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem10-20191122-5100.22.docx">DOCX</a></h3>
+    <h3>PWG 5100.22-2025: IPP System Service v1.1 (SYSTEM) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem11-20250328-5100.22.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem11-20250328-5100.22.docx">DOCX</a></h3>
     <p>This specification defines an IPP binding of the System object, System Control Service, Resource Service, and registration operation as defined in various Semantic Model specifications (PWG 5108.06, PWG 5108.03, and PWG 5109.1).</p>
   </div>
 </div>
