--- a/ipp/index.html
+++ b/ipp/index.html
@@ -124,33 +124,15 @@ layout: bare
     (Initial Draft - Last Updated May 10, 2022)</p>
 
     <p>IPP OAuth Extensions v1.0 (OAUTH):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20250502.pdf">Clean</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20250508.pdf">Clean</a>
     &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20250502-rev.pdf">Redlined</a>
+    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippoauth10-20250508-rev.pdf">Redlined</a>
     &middot;
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/lcrc-ippoauth10.txt">LCRC Comments</a>
     (LCRC Draft - Last Updated May 2, 2025)</p>
 
-    <p>IPP Shared Infrastructure Extensions v1.1 (INFRA):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20250331.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippinfra11-20250331-rev.pdf">Redlined</a>
-    (PWG Call for Objections Ends May 2, 2025 - Stable Draft - Last Updated March 31, 2025)</p>
-
 
     <h3>Registration Drafts</h3>
-
-    <p>IPP Console Extensions v1.0 (CONSOLE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250227.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippconsole10-20250227-rev.pdf">Redlined</a>
-    (IPP WG Last Call Ends April 25, 2025 - Stable Draft - Last Updated February 27, 2025)</p>
-
-    <p>IPP Envelope Media Extensions v1.0 (ENVELOPE):
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250425.pdf">Clean</a>
-    &middot;
-    <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippenvelope10-20250425-rev.pdf">Redlined</a>
-    (IPP WG Last Call Ends May 9, 2025 - Stable Draft - Last Updated April 25, 2025)</p>
 
     <p>IPP Firmware Update Extensions v1.0 (FWUPDATE):
     <a href="https://ftp.pwg.org/pub/pwg/ipp/wd/wd-ippfwupdate-20250506.pdf">Clean</a>
@@ -198,7 +180,7 @@ layout: bare
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippfaxout10-20140618-5100.15.pdf">PWG 5100.15-2014:</a> IPP FaxOut Service<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ipptrans11-20200327-5100.16.pdf">PWG 5100.16-2020:</a> IPP Transaction-Based Printing Extensions v1.1<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippscan10-20140918-5100.17.pdf">PWG 5100.17-2014:</a> IPP Scan Service<br>
-    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra10-20150619-5100.18.pdf">PWG 5100.18-2015:</a> IPP Shared Infrastructure Extensions (INFRA)<br>
+    <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippinfra11-20250502-5100.18.pdf">PWG 5100.18-2025:</a> IPP Shared Infrastructure Extensions v1.1 (INFRA)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippig20-20150821-5100.19.pdf">PWG 5100.19-2015:</a> IPP Implementor's Guide v2.0 (IG)<br>
     <a href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippeveselfcert11-20200515-5100.20.pdf">PWG 5100.20-2020:</a> IPP Everywhere™ Printer Self-Certification Manual v1.1 (SELFCERT)<br>
     &nbsp;&nbsp;&nbsp;&nbsp;<a href="../ippeveselfcert/index.html">Tools, etc.</a><br>
@@ -248,9 +230,10 @@ layout: bare
     <h3>IPP Registration Documents <a class="badge badge-primary badge-pill" href="#" id="registrations" role="button" data-toggle="popover" data-container="body" data-content="An IPP Registration is a document that defines new IPP attributes, values, or operations and has been approved by the Internet Printing Protocol workgroup.">i</a></h3>
 
     <p><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippdepuri10-20211215.pdf">Deprecating IPP Print by Reference v1.0</a>
+    <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippconsole10-20250425.pdf">IPP Console Extensions v1.0 (CONSOLE)</a>
+    <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippenvelope10-20250509.pdf">IPP Envelope Media Extensions v1.0 (ENVELOPE)</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ipplabel10-20200213.pdf">IPP Label Printing Extensions v1.0</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippprivacy10-20180412.pdf">IPP Privacy Attributes v1.0 (PRIVACY)</a>
-    <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippsysdisc10-20200604.pdf">IPP System Service Discovery v1.0</a>
     <br><a href="https://ftp.pwg.org/pub/pwg/ipp/registrations/reg-ippwifi10-20240912.pdf">IPP Wi-Fi Configuration Extensions v1.0 (WIFI)</a>
     </p>
 
