--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ layout: bare
 </div>
 <div class="row pwg-panel">
   <div class="col-md-12 col-sm-12">
-    <p>The Printer Working Group (PWG) is a Program of the <a href="http://www.ieee-isto.org/">IEEE Industry Standard and Technology Organization (ISTO)</a> with members including printer and multi-function device manufacturers, print server developers, operating system providers, print management application developers, and industry experts. Originally founded in 1991 as the Network Printing Alliance, the PWG is chartered to make printers, multi-function devices, and the applications and operating systems supporting them work together better.</p>
+    <p>The Printer Working Group (PWG) is a Program of the <a href="http://www.isto.org/">Industry Standard and Technology Organization (ISTO)</a> with members including printer and multi-function device manufacturers, print server developers, operating system providers, print management application developers, and industry experts. Originally founded in 1991 as the Network Printing Alliance, the PWG is chartered to make printers, multi-function devices, and the applications and operating systems supporting them work together better.</p>
 
     <p>The PWG enjoys an open standards development process. Everyone is welcome to contribute to the development of our documents and standards, serve as editors, and participate in interoperability tests. Members may additionally serve as officers in the various working groups. Voting Members approve the documents and standards for publication and may serve as officers of the PWG.</p>
 
