--- a/informational.html
+++ b/informational.html
@@ -14,7 +14,7 @@ layout: bare
       <nav class="nav nav-pills flex-column">
 	<a class="nav-link" href="#best-practices">Best Practices</a>
 	<a class="nav-link" href="#requirements">Requirements Documents</a>
-	<a class="nav-link" href="#presentations">IEEE-ISTO Presentations</a>
+	<a class="nav-link" href="#presentations">ISTO Presentations</a>
       </nav>
     </nav>
   </div>
@@ -56,9 +56,9 @@ layout: bare
       <p>The Multifunction Device Service Model represents an abstraction of the characteristics, capabilities, and interfaces of each of the imaging services potentially provided by a Multifunction Device (MFD), as they are accessible to an outside client. The effort to model these services as a group and the associated effort in representing these models in a MFD Semantic Model is intended to highlight the commonality in the elements of these services while preserving the distinct functions of each service. The ultimate objective is to exploit the commonality to provide a consistent interface to services that have evolved in different environments and under different circumstances, but now are typically executed in the same device and used in the same environment.</p>
       <p>This document provides the rationale and summarizes the requirements for the modeling activity.</p>
 
-      <h2 id="presentations">IEEE-ISTO Presentations</h2>
+      <h2 id="presentations">ISTO Presentations</h2>
 
-      <p>Additional information about our program with the IEEE-ISTO organization can be found in the following material:</p>
+      <p>Additional information about our program with the ISTO organization can be found in the following material:</p>
 
       <ol>
 	<li><a href="/chair/presentations/isto1.pdf">Press release announcing ISTO</a></li>
