OAUTH, FIRMWARE, and IPP Everywhere printers.

--- a/standards.html
+++ b/standards.html
@@ -113,6 +113,9 @@ layout: bare
 
     <h3>PWG 5100.22-2025: IPP System Service v1.1 (SYSTEM) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem11-20250328-5100.22.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippsystem11-20250328-5100.22.docx">DOCX</a></h3>
     <p>This specification defines an IPP binding of the System object, System Control Service, Resource Service, and registration operation as defined in various Semantic Model specifications (PWG 5108.06, PWG 5108.03, and PWG 5109.1).</p>
+
+    <h3>PWG 5100.23-2025: IPP OAuth Extensions v1.0 (OAUTH) <a class="badge badge-primary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippoauth10-20251017-5100.23.pdf">PDF</a> <a class="badge badge-secondary" href="https://ftp.pwg.org/pub/pwg/candidates/cs-ippoauth10-20251017-5100.23.docx">DOCX</a></h3>
+    <p>This document defines IPP extensions, best practices, and implementation guidance for using OAuth 2.0 and OpenID Connect with IPP.</p>
   </div>
 </div>
 <div class="row pwg-panel pwg-alt-0">
